# forum_pathon_django

./: README.md  pyproject.toml
IT_forum/: manage.py
IT_forum/IT_forum/: asgi.py  settings.py  urls.py  wsgi.py
IT_forum/forums_board/: apps.py  models.py  urls.py  views.py
IT_forum/forums_board/templates/forums_board/: index.html
IT_forum/topic/: urls.py
technical task/: task.txt
